att menu inteligente

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -6,11 +6,14 @@
         <title>Bryam Assolini</title>
         <link rel="stylesheet" href="./css/index.css">
         <!-- API Font Awesome -->
-        <script src="https://kit.fontawesome.com/398cd98506.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/398cd98506.js"
+            crossorigin="anonymous"></script>
+
+        <script type="module" src="./index.js"></script>
     </head>
     <body>
-        <header>
-            <div id="logo_profession">
+        <header id="header">
+            <!-- <div id="logo_profession">
                 <div id="logo"></div>
                 <h5 id="profession">Professor de Computação</h5>
             </div>
@@ -18,7 +21,7 @@
                 <button class="btn_header">
                     <div class="animation">
                         <i class="fa-solid fa-house"></i>
-                        <h1 >HOME</h1>
+                        <h1>HOME</h1>
                     </div>
                 </button>
                 <button class="btn_header">
@@ -30,10 +33,10 @@
                 <button class="btn_header">
                     <div class="animation">
                         <i class="fa-solid fa-graduation-cap"></i>
-                        <h1>FORMAÇÃO</h1> 
-                    </div>                   
+                        <h1>FORMAÇÃO</h1>
+                    </div>
                 </button>
-            </div>
+            </div> -->
         </header>
         <main>
             <img id="img_main" src="./img/main_img.png">
@@ -71,8 +74,5 @@
                 </span>
             </button>
         </footer>
-        <div id="square">
-            <img src="./img/logo.png">
-        </div>
     </body>
 </html>
