--- a/portifolio/projects.html
+++ b/portifolio/projects.html
@@ -13,9 +13,18 @@
     </head>
     <body>
         <header id="header"></header>
-
-        <button onclick="switchMenu()" id="btn_menu" class="open"></button>
-        <div id="menu_container"></div>
+        <nav id="nav_banner">
+            <div id="banners">
+                <div class="banner"></div>
+                <div class="banner"></div>
+                <div class="banner"></div>
+            </div>
+            <div id="btn_banners">
+                <button id="btn_banner_1" class="btn_banner" onclick="switchBanner(1)"></button>
+                <button id="btn_banner_2" class="btn_banner" onclick="switchBanner(2)"></button>
+                <button id="btn_banner_3" class="btn_banner" onclick="switchBanner(3)"></button>
+            </div>
+        </nav>
     </body>
 </html>
 
