--- a/portifolio/projects.html
+++ b/portifolio/projects.html
@@ -25,6 +25,10 @@
                 <button id="btn_banner_3" class="btn_banner" onclick="switchBanner(3)"></button>
             </div>
         </nav>
+        <main>
+            <section id="cards">
+            </section>
+        </main>
     </body>
 </html>
 
